--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -22,9 +22,69 @@
 
 .intro .left .imgContainer img {
   width: 100%;
+  height: 100%;
 }
 
 .intro .right {
   flex: 0.5;
   /* background-color: red; */
+  position: relative;
+}
+
+.intro .right .wrapper {
+  width: 100%;
+  height: 100%;
+  padding-left: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.intro .right .wrapper h1 {
+  font-size: 60px;
+  margin: 10px 0;
+}
+
+.intro .right .wrapper h2 {
+  font-size: 35px;
+}
+
+.intro .right .wrapper h3 {
+  font-size: 30px;
+}
+
+.intro .right .wrapper h3 span {
+  font-size: inherit;
+  color: crimson;
+}
+
+.intro .right .wrapper h3 .ityped-cursor {
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.intro .right a {
+  position: absolute;
+  bottom: 10px;
+  left: 40%;
+  bottom: 5%;
+}
+
+.intro .right a img {
+  width: 30px;
+  animation: arrowBlink 1.8s infinite;
+}
+
+@keyframes arrowBlink {
+  100% {
+    opacity: 0.1;
+  }
 }
