--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -1,3 +1,66 @@
 .project {
-  background-color: bisque;
+  background-color: rgb(121, 121, 204);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project h1 {
+  font-size: 50px;
+}
+
+.project ul {
+  margin: 10px;
+  padding: 0;
+  list-style: none;
+  display: flex;
+}
+
+.project ul li {
+  font-size: 14px;
+  margin-right: 50px;
+  padding: 7px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.project ul .active {
+  background-color: orange;
+}
+
+.container {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.container .item {
+  width: 220px;
+  height: 150px;
+  border-radius: 20px;
+  border: 1px solid lightgrey;
+  margin: 10px 20px;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  position: relative;
+  display: flex;
+  /* overflow: hidden; */
+}
+
+.container .item .title {
+  position: absolute;
+  font-size: 20px;
+  color: black;
+  top: 50px;
+  left: 50px;
+}
+
+.container .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* z-index: 1; */
 }
