--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -16,7 +16,7 @@
   display: flex;
 }
 
-.project ul li {
+/* .project ul li {
   font-size: 14px;
   margin-right: 50px;
   padding: 7px;
@@ -26,7 +26,7 @@
 
 .project ul .active {
   background-color: orange;
-}
+} */
 
 .container {
   width: 70%;
@@ -47,6 +47,8 @@
   color: white;
   position: relative;
   display: flex;
+  transition: all 0.6s ease;
+  cursor: pointer;
   /* overflow: hidden; */
 }
 
@@ -62,5 +64,13 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* z-index: 1; */
+  z-index: 1;
+}
+
+.container .item:hover {
+  background-color: grey;
+}
+.container .item:hover img {
+  opacity: 0.2;
+  z-index: 0;
 }
