--- a/src/component/intro/intro.scss
+++ b/src/component/intro/intro.scss
@@ -1,6 +1,13 @@
+@import "../../global.scss";
+
 .intro {
   background-color: white;
   display: flex;
+
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -12,19 +19,32 @@
       background-color: crimson;
       border-radius: 50%;
       display: flex;
-      // align-items: flex-end;
-      align-items: center;
+      align-items: flex-end;
+      // align-items: center;
       justify-content: center;
       float: right;
 
+      @include mobile {
+        align-items: flex-start;
+      }
+
       img {
         width: 90%;
+
+        @include mobile {
+          height: 50%;
+        }
       }
     }
   }
   .right {
     flex: 0.5;
     position: relative;
+
+    @include mobile {
+      bottom: 5%;
+    }
+
     .wrapper {
       width: 100%;
       height: 100%;
@@ -33,15 +53,32 @@
       flex-direction: column;
       justify-content: center;
 
+      @include mobile {
+        padding: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 60px;
         margin: 10px 0;
+
+        @include mobile {
+          font-size: 40px;
+        }
       }
       h2 {
         font-size: 35px;
+
+        @include mobile {
+          font-size: 25px;
+        }
       }
       h3 {
         font-size: 30px;
+
+        @include mobile {
+          font-size: 22px;
+        }
 
         span {
           font-size: inherit;
@@ -66,6 +103,13 @@
       position: absolute;
       bottom: 28px;
       left: 30%;
+
+      @include mobile {
+        left: 45%;
+        bottom: 0;
+        align-items: center;
+        justify-content: center;
+      }
 
       img {
         width: 30px;
