--- a/src/component/intro/intro.scss
+++ b/src/component/intro/intro.scss
@@ -1,73 +1,71 @@
 @import "../../global.scss";
 
 .intro {
-  background-color: white;
+  background-color: #fff;
   display: flex;
+  position: relative;
+  z-index: 1;
+
+  &:before {
+    content: "";
+    position: absolute;
+    // background-image: url("https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80");
+    background-image: url("../../assets/images/bg_Destktop.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+  }
 
   @include mobile {
     flex-direction: column;
     align-items: center;
-  }
-
-  .left {
-    flex: 0.5;
-    overflow: hidden;
-
-    .imgContainer {
-      width: 700px;
-      height: 700px;
-      background-color: crimson;
-      border-radius: 50%;
-      display: flex;
-      align-items: flex-end;
-      // align-items: center;
-      justify-content: center;
-      float: right;
-
-      @include mobile {
-        align-items: flex-start;
-      }
-
-      img {
-        width: 90%;
-
-        @include mobile {
-          height: 50%;
-        }
-      }
-    }
-  }
-  .right {
-    flex: 0.5;
     position: relative;
+  }
+
+  .textIntro {
+    // flex: 0.6;
 
     @include mobile {
-      bottom: 5%;
+      // bottom: 55%;
+      flex: 1.8;
     }
 
     .wrapper {
       width: 100%;
       height: 100%;
-      padding-left: 50px;
+      position: absolute;
+      left: 28%;
+      bottom: 28%;
       display: flex;
       flex-direction: column;
       justify-content: center;
 
       @include mobile {
-        padding: 0;
-        align-items: center;
+        height: 100%;
+        position: absolute;
+        left: 12%;
+        bottom: 28%;
       }
 
       h1 {
         font-size: 60px;
         margin: 10px 0;
+        color: #26474e;
 
         @include mobile {
           font-size: 40px;
         }
       }
       h2 {
+        color: #26474e;
         font-size: 35px;
+        margin: 0 5px;
 
         @include mobile {
           font-size: 25px;
@@ -75,6 +73,7 @@
       }
       h3 {
         font-size: 30px;
+        margin-top: 10px;
 
         @include mobile {
           font-size: 22px;
@@ -82,7 +81,7 @@
 
         span {
           font-size: inherit;
-          color: crimson;
+          color: #c54b6c;
         }
 
         .ityped-cursor {
@@ -98,28 +97,61 @@
         }
       }
     }
+  }
 
-    a {
-      position: absolute;
-      bottom: 28px;
-      left: 30%;
+  // .right {
+  //   flex: 0.4;
+  //   overflow: hidden;
 
-      @include mobile {
-        left: 45%;
-        bottom: 0;
-        align-items: center;
-        justify-content: center;
-      }
+  //   .imgContainer {
+  //     width: 100%;
+  //     height: 100%;
+  //     // background-color: #e2c2b9;
+  //     // border-radius: 50%;
+  //     display: flex;
+  //     align-items: center;
+  //     // align-items: center;
+  //     justify-content: center;
+  //     // float: right;
 
-      img {
-        width: 30px;
-        animation: arrowBlink 1.2s infinite;
-      }
+  //     @include mobile {
+  //       align-items: flex-start;
+  //       display: none;
+  //       flex: 0.2;
+  //     }
 
-      @keyframes arrowBlink {
-        100% {
-          opacity: 0;
-        }
+  //     img {
+  //       width: 100%;
+
+  //       @include mobile {
+  //         height: 50%;
+  //         display: none;
+  //       }
+  //     }
+  //   }
+  // }
+  a {
+    position: absolute;
+    bottom: 22px;
+    left: 50%;
+
+    @include mobile {
+      left: 45%;
+      bottom: 30px;
+
+      align-items: center;
+      justify-content: center;
+    }
+
+    img {
+      width: 45px;
+      animation: arrowBlink 1.2s infinite;
+      color: #26474e;
+    }
+
+    @keyframes arrowBlink {
+      100% {
+        opacity: 0;
       }
     }
   }
