--- a/src/component/menu/menu.scss
+++ b/src/component/menu/menu.scss
@@ -3,7 +3,7 @@
 .menu {
   width: 300px;
   height: 100vh;
-  background-color: $mainColor;
+  background-color: #a4cce3;
   position: fixed;
   top: 0;
   right: -300px;
