--- a/src/component/portfolio/portfolio.scss
+++ b/src/component/portfolio/portfolio.scss
@@ -1,14 +1,14 @@
 @import "../../global.scss";
 
 .portfolio {
-  background-color: white;
+  background-color: #f2ddc1;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   h1 {
     font-size: 50px;
-    // margin-top: 30px;
+    margin-top: 30px;
 
     @include mobile {
       font-size: 20px;
