--- a/src/component/works/works.scss
+++ b/src/component/works/works.scss
@@ -80,28 +80,32 @@
               width: 90%;
               height: 90%;
             }
-
-            .imgContainer {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              background-color: rgb(234, 162, 135);
+            .imgs-container {
               display: flex;
-              align-items: center;
-              justify-content: center;
-              border: none;
-              overflow: hidden;
 
-              @include mobile {
-                width: 20px;
-                height: 20px;
-              }
-
-              img {
-                width: 30px;
+              .logContainer {
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                background-color: rgb(234, 162, 135);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 0 3px;
+                border: none;
+                overflow: hidden;
 
                 @include mobile {
-                  width: 15px;
+                  width: 20px;
+                  height: 20px;
+                }
+
+                img {
+                  width: 30px;
+
+                  @include mobile {
+                    width: 15px;
+                  }
                 }
               }
             }
