--- a/src/component/works/works.scss
+++ b/src/component/works/works.scss
@@ -1,11 +1,23 @@
 @import "../../global.scss";
 
 .works {
-  background-color: #e2c2b9;
+  background-color: #f6f6f6;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+
+  h1 {
+    align-self: flex-start;
+    font-size: 50px;
+    margin-top: 30px;
+    color: #26474e;
+
+    @include mobile {
+      font-size: 25px;
+      margin-top: 10px;
+    }
+  }
 
   .arrow {
     height: 50px;
@@ -32,7 +44,7 @@
     display: flex;
     position: absolute;
     left: 0;
-    transition: all 1s ease-out;
+    transition: all 0.8s ease-out;
 
     @include mobile {
       height: 100vh;
@@ -49,7 +61,7 @@
       .item {
         width: 700px;
         height: 100%;
-        background-color: white;
+        background-color: rgb(205, 216, 226);
         border-radius: 20px;
         display: flex;
         align-items: center;
@@ -68,6 +80,8 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          padding: 0 10px 20px;
+          // margin-bottom: 10px;
 
           .leftContainer {
             width: 90%;
@@ -78,7 +92,8 @@
 
             @include mobile {
               width: 90%;
-              height: 90%;
+              height: 80%;
+              padding: 0;
             }
             .imgs-container {
               display: flex;
@@ -87,13 +102,14 @@
                 width: 40px;
                 height: 40px;
                 border-radius: 50%;
-                background-color: rgb(234, 162, 135);
+                background-color: #fff;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                margin: 0 3px;
+                margin: 0 1px;
                 border: none;
                 overflow: hidden;
+                outline: none;
 
                 @include mobile {
                   width: 20px;
@@ -102,6 +118,7 @@
 
                 img {
                   width: 30px;
+                  border: none;
 
                   @include mobile {
                     width: 15px;
@@ -111,7 +128,8 @@
             }
 
             h2 {
-              font-size: 20px;
+              font-size: 25px;
+              color: $mainColor;
 
               @include mobile {
                 font-size: 15px;
