--- a/src/component/works/works.scss
+++ b/src/component/works/works.scss
@@ -14,8 +14,8 @@
     color: #26474e;
 
     @include mobile {
-      font-size: 25px;
-      margin-top: 10px;
+      font-size: 30px;
+      padding-top: 18px;
     }
   }
 
@@ -32,10 +32,18 @@
     &.left {
       left: 100px;
       transform: rotate(90deg);
+
+      @include tablet {
+        left: 30px;
+      }
     }
     &.right {
       right: 100px;
       transform: rotate(-90deg);
+
+      @include tablet {
+        right: 30px;
+      }
     }
   }
 
@@ -47,9 +55,10 @@
     transition: all 0.8s ease-out;
 
     @include mobile {
-      height: 100vh;
+      height: 90vh;
       flex-direction: column;
       justify-content: center;
+      // overflow: hidden;
     }
 
     .container {
