--- a/src/component/testimonials/testimonials.scss
+++ b/src/component/testimonials/testimonials.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .testimonials {
-  background-color: white;
+  background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,6 +13,7 @@
   h1 {
     font-size: 50px;
     // overflow: hidden;
+    color: #26474e;
 
     @include mobile {
       font-size: 20px;
