--- a/src/component/works/works.scss
+++ b/src/component/works/works.scss
@@ -39,6 +39,14 @@
       left: 100px;
       transform: rotate(90deg);
 
+      &:hover {
+        transform: rotate(90deg) scale(1.2);
+      }
+
+      &:focus {
+        outline: none;
+      }
+
       @include tablet {
         left: 30px;
       }
@@ -46,6 +54,14 @@
     &.right {
       right: 100px;
       transform: rotate(-90deg);
+
+      &:hover {
+        transform: rotate(-90deg) scale(1.2);
+      }
+
+      &:focus {
+        outline: none;
+      }
 
       @include tablet {
         right: 30px;
@@ -73,6 +89,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
 
       .item {
         width: 700px;
@@ -82,6 +99,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
 
         @include mobile {
           width: 80%;
@@ -97,11 +115,15 @@
           align-items: center;
           justify-content: center;
           padding: 0 10px 30px;
+          overflow: hidden;
           // margin-bottom: 10px;
+          @include mobile {
+            margin-top: 20px;
+          }
 
           .leftContainer {
             width: 90%;
-            height: 90%;
+            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
@@ -110,9 +132,10 @@
             @include mobile {
               width: 90%;
               height: 80%;
-              padding: 0;
+              margin: 15px 0;
               overflow: hidden;
             }
+
             .imgs-container {
               display: flex;
               margin-bottom: 15px;
@@ -120,6 +143,7 @@
               @include mobile {
                 overflow: hidden;
                 margin: 0;
+                top: 5px;
               }
 
               .logContainer {
@@ -139,6 +163,7 @@
                   width: 20px;
                   height: 20px;
                   margin-bottom: 5px;
+                  padding: 0;
                 }
 
                 img {
@@ -158,7 +183,8 @@
               color: $mainColor;
 
               @include mobile {
-                margin: 15px 0 0px;
+                height: 30px;
+                margin: 15px 0 0;
                 font-size: 17px;
                 overflow: hidden;
               }
@@ -177,9 +203,12 @@
 
             .btnContainer {
               margin-top: 20px;
+
               @include mobile {
                 overflow: hidden;
-                margin-top: 10px;
+                height: 20px;
+                margin: 5px 0 0 0;
+                padding: 10px 0 10px 0;
               }
 
               .linkBtn {
@@ -207,6 +236,7 @@
                   height: 25px;
                   margin-top: 0px;
                   overflow: hidden;
+                  padding: 0;
                 }
 
                 a img {
